Fix Insight section on mobile

--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -12,10 +12,6 @@
   position: relative;
 }
 
-.projects .projects-section.horizontal {
-  overflow-x: hidden;
-}
-
 .projects-section.horizontal .pin-wrap,
 .projects-section.horizontal .animation-wrap {
   display: flex;
